Remove references to recipes.yml