@@ -8,7 +8,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.ShapedRecipe;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Arrays;
+import java.util.List;
 
 /*
 easy_shape:SSS,T-T,RRR
@@ -39,10 +39,7 @@ public class TARDISARSCircuitRecipe {
         ItemMeta im = is.getItemMeta();
         im.setDisplayName("TARDIS ARS Circuit");
         im.setCustomModelData(10001973);
-        String lore = plugin.getRecipesConfig().getString("shaped.TARDIS ARS Circuit.lore");
-        if (!lore.isEmpty()) {
-            im.setLore(Arrays.asList(lore.split("~")));
-        }
+        im.setLore(List.of("Uses left", "20"));
         is.setItemMeta(im);
         NamespacedKey key = new NamespacedKey(plugin, "tardis_ars_circuit");
         ShapedRecipe r = new ShapedRecipe(key, is);
