@@ -8,7 +8,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.ShapedRecipe;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Arrays;
+import java.util.List;
 
 /*
 easy_shape:-R-,-S-,-R-
@@ -35,10 +35,7 @@ public class TARDISInputCircuitRecipe {
         ItemMeta im = is.getItemMeta();
         im.setDisplayName("TARDIS Input Circuit");
         im.setCustomModelData(10001976);
-        String lore = plugin.getRecipesConfig().getString("shaped.TARDIS Input Circuit.lore");
-        if (!lore.isEmpty()) {
-            im.setLore(Arrays.asList(lore.split("~")));
-        }
+        im.setLore(List.of("Uses left", "50"));
         is.setItemMeta(im);
         NamespacedKey key = new NamespacedKey(plugin, "tardis_input_circuit");
         ShapedRecipe r = new ShapedRecipe(key, is);
