@@ -8,7 +8,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.ShapedRecipe;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Arrays;
+import java.util.List;
 
 /*
 easy_shape:IRI,-L-,QRQ
@@ -40,10 +40,7 @@ public class TARDISMaterialisationCircuitRecipe {
         ItemMeta im = is.getItemMeta();
         im.setDisplayName("TARDIS Materialisation Circuit");
         im.setCustomModelData(10001964);
-        String lore = plugin.getRecipesConfig().getString("shaped.TARDIS Materialisation Circuit.lore");
-        if (!lore.isEmpty()) {
-            im.setLore(Arrays.asList(lore.split("~")));
-        }
+        im.setLore(List.of("Uses left", "50"));
         is.setItemMeta(im);
         NamespacedKey key = new NamespacedKey(plugin, "tardis_materialisation_circuit");
         ShapedRecipe r = new ShapedRecipe(key, is);
